# noaabathymetry

./: .gitignore  Makefile  README.md  SECURITY.md  book.toml  pyproject.toml  vrt_file_probe.py  vrt_perf_bench.py  vrt_qgis_sim.py  vrt_viewport_bench.py
.github/ISSUE_TEMPLATE/: 1_bug_report.yml
.github/workflows/: docs.yml  draft.yml  pypi.yaml  test.yml
docs/: SUMMARY.md  about-nbs.md  api-reference.md  browser-ui-app.md  data-sources.md  geometry-helper.md  index.md  quickstart-helper.md  troubleshooting.md  user-guide.md
docs/theme/: sidebar-logo.css  sidebar-logo.js
nbs/bluetopo/: __init__.py  cli.py
nbs/bluetopo/_internal/: builder.py  config.py  db.py  debug.py  diagnostics.py  download.py  fetcher.py  geometry.py  spatial.py  vrt.py
nbs/bluetopo/cli/: cli.py
nbs/bluetopo/core/: build_vrt.py  datasource.py  fetch_tiles.py
nbs/noaabathymetry/: __init__.py  cli.py  cli_formatter.py
nbs/noaabathymetry/_internal/: builder.py  config.py  db.py  diagnostics.py  download.py  fetcher.py  mosaic.py  ratelimit.py  spatial.py  status.py  vrt.py
tests/: conftest.py
tests/e2e/: test_e2e_bluetopo.py  test_e2e_pipeline.py
tests/integration/: test_build_pipeline.py  test_config_driven.py  test_db_population.py  test_local_source.py  test_mosaic_pipeline.py
tests/unit/: test_build_vrt_db.py  test_build_vrt_rat.py  test_build_vrt_vrt.py  test_cleanup.py  test_cli.py  test_cli_formatter.py  test_datasource.py  test_export.py  test_fetch_tiles_db.py  test_fetch_tiles_download.py  test_fetch_tiles_geo.py  test_library.py  test_mosaic.py  test_mosaic_tiles_db.py  test_mosaic_tiles_mosaic.py  test_mosaic_tiles_rat.py  test_ratelimit.py  test_status.py  test_verify.py
