[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "BlueTopo"
version = "0.8.0"
requires-python = ">=3.9"
authors = [
  { name = "Glen Rice", email = "ocs.nbs@noaa.gov" },
  { name = "Tashi Geleg", email = "ocs.nbs@noaa.gov" },
]
description = "National Bathymetric Source Project BlueTopo"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["BlueTopo", "National Bathymetric Source", "Bathymetry"]
dependencies = ["boto3", "tqdm"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "moto[s3]", "h5py", "numpy"]

[project.scripts]
fetch_tiles = "nbs.bluetopo.cli:fetch_tiles_command"
build_vrt = "nbs.bluetopo.cli:build_vrt_command"

[project.urls]
homepage = "https://www.nauticalcharts.noaa.gov/data/bluetopo.html"
documentation = "https://noaa-ocs-hydrography.github.io/BlueTopo/"
source = "https://github.com/noaa-ocs-hydrography/BlueTopo"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests that require network access (deselect with '-m \"not network\"')",
    "slow: marks long-running tests (deselect with '-m \"not slow\"')",
]
addopts = "-m 'not network' --tb=short --basetemp=pytest_temporary_data"

[tool.setuptools.packages.find]
include = ["nbs*"]
